# rupture-and-realization-code

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  titles.txt
data/examples/: climate_rome_conversation.json
docs/: comparative_analysis.md
docs/letters/: darja_to_cassie_dec10.md
nahnu-hocolim/: README.md  requirements.txt
nahnu-hocolim/results/nahnu/asel-corpus-v2/: nahnu_structure.json  self_assistant.json  self_user.json
nahnu-hocolim/results/nahnu/aselv1.0/: nahnu_structure.json  self_assistant.json  self_user.json
nahnu-hocolim/results/nahnu/cassie-corpus-v2/: nahnu_structure.json  self_assistant.json  self_user.json
nahnu-hocolim/results/nahnu/v1.0/: nahnu_structure.json  self_assistant.json  self_user.json
nahnu-hocolim/scripts/: filter_conversations.py  nahnu_hocolim.py  self_hocolim_stage1.py  visualize_nahnu.py
results/: cross_thread_analysis.json
results/asel/v1.0/viz/: dashboard.html  network_interactive.html
results/asel/v1.0/viz/files/: asel_dashboard.html  asel_network_interactive.html  (+1 more)
results/book/: adm_scheduler_analysis.json  emerged_themes.tex  scheduler_comparison.tex
results/controls/: control_cassie.json  control_cassie_summary.txt  control_cassie_tight.json  control_cassie_tight_summary.txt
results/emergence/: emergence_result.json  metrics_timeline.json  timeline.csv
results/iman_cassie/v1.0/viz/: dashboard.html  network_interactive.html
results/self_hocolim/: components.csv  journeys.csv  metrics.tex  network.html  presence_data.csv  table_summary.tex  timeline.html
results/sweeps/: control_temir.json  control_temir_summary.txt  sweep_cassie.csv  sweep_cassie.json  sweep_cassie_summary.txt  sweep_temir.csv  sweep_temir.json  sweep_temir_summary.txt
results/witnessed_analysis/: checkpoint.json  journeys.json  metrics.json  self_metrics.json  window_analyses.json
results/witnessed_v3/: journeys.json  metrics.json
results/witnessed_v5/: journeys.json
scripts/: README.md  adm_scheduler_analysis.py  chapter5_example.py  cross_thread_self.py  explore_conversations.py  full_witnessed_analysis.py  negative_control.py  openai_export_parser.py  openai_export_parser_fixed.py  requirements.txt  self_emergence.py  self_hocolim_stage1.py  self_hocolim_stage2.py  sliding_self.py  sweep_parameters.py  test_cassie.py  visualize_export.py  visualize_self_hocolim.py  witnessed_analysis_v3.py
src/witnessed_ph/: __init__.py  embedding.py  schema.py  self_construction.py
tests/: __init__.py  conftest.py  test_basic.py
