[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "witnessed-ph"
version = "0.1.0"
description = "Witnessed Persistent Homology for Semantic Analysis - Code for 'Rupture and Realization: A New Logic of Posthuman Intelligence'"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Iman Poernomo", email = "iman@example.com"},
]
maintainers = [
    {name = "Iman Poernomo"},
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Text Processing :: Linguistic",
]
keywords = [
    "topology", 
    "persistent-homology", 
    "NLP", 
    "semantics", 
    "homotopy-type-theory",
    "TDA",
    "conversational-AI",
    "witnessed-persistence",
]

dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.2.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "spacy>=3.5.0",
    "sentencepiece>=0.1.99",
    "gudhi>=3.8.0",
    "ijson>=3.2.0",
    "networkx>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
viz = [
    "matplotlib>=3.7.0",
    "umap-learn>=0.5.0",
    "plotly>=5.0.0",
]
all = ["witnessed-ph[dev,viz]"]

[project.urls]
Homepage = "https://github.com/thegoodtailor/rupture-and-realization"
Documentation = "https://github.com/thegoodtailor/rupture-and-realization#readme"
Repository = "https://github.com/thegoodtailor/rupture-and-realization.git"
Issues = "https://github.com/thegoodtailor/rupture-and-realization/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"
